# commit-message-gen

./: .pre-commit-config.yaml  .tool-versions  Makefile  README.md  pyproject.toml  script.py  script.sh
